Added Ebean ORM, jbdc to server project. Finished ORM of user+locations side of the DB

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,12 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
+
+db.default.driver="org.postgresql.Driver"
+db.default.url="jdbc:postgresql://localhost:5432/restoran"
+db.default.username = "postgres"
+db.default.password = "latitude"
+
+ebean.default = ["models.*"]
+
+play.evolutions.db.default.autoApply= true
