--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 db.default.driver="org.postgresql.Driver"
 db.default.url="jdbc:postgresql://localhost:5432/restoran"
 db.default.username = "postgres"
-db.default.password = "latitude"
+db.default.password = "abh"
 
 ebean.default = ["models.*"]
 
