--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
+play.modules.enabled += "EagerLoaderModule"
 
 db.default.driver="org.postgresql.Driver"
 db.default.url="jdbc:postgresql://localhost:5432/restoran"
