--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Created by https://www.gitignore.io/api/intellij,playframework
+
+# Created by https://www.gitignore.io/api/macos,scala,intellij,playframework
+# Edit at https://www.gitignore.io/?templates=macos,scala,intellij,playframework
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -79,6 +81,34 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 ### PlayFramework ###
 # Ignore Play! working directory #
 bin/
@@ -97,6 +127,8 @@ server.pid
 /dist/
 .cache
 
-.DS_Store
+### Scala ###
+*.class
+*.log
 
-# End of https://www.gitignore.io/api/intellij,playframework
+# End of https://www.gitignore.io/api/macos,scala,intellij,playframework
