--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,9 +4,9 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.modules.enabled += "EagerLoaderModule"
 
 db.default.driver="org.postgresql.Driver"
-db.default.url="jdbc:postgresql://localhost:5432/restoran"
-db.default.username = "postgres"
-db.default.password = "abh"
+db.default.url=${?JDBC_DATABASE_URL}
+db.default.username=${?JDBC_DATABASE_USERNAME}
+db.default.password=${?JDBC_DATABASE_PASSWORD}
 
 ebean.default = ["models.*"]
 
