--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,7 +4,9 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.modules.enabled += "EagerLoaderModule"
 
 db.default.driver="org.postgresql.Driver"
-
+db.default.jdbcUrl=${?JDBC_DATABASE_URL}
+db.default.username=${?JDBC_DATABASE_USERNAME}
+db.default.password=${?JDBC_DATABASE_PASSWORD}
 
 ebean.default = ["models.*"]
 
