--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,5 +3,9 @@
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.modules.enabled += "EagerLoaderModule"
 
+db.default.driver=org.postgresql.Driver
+db.default.url=${DATABASE_URL}
+
 ebean.default = ["models.*"]
 
+play.evolutions.db.default.autoApply= true
