--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,9 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
-play.modules.enabled += "EagerLoaderModule"
+
+play.http.secret.key="12345678987654321"
+play.http.secret.key=${?APPLICATION_SECRET}
 
 db.default.driver=org.postgresql.Driver
 db.default.url=${DATABASE_URL}
@@ -9,3 +11,5 @@ db.default.url=${DATABASE_URL}
 ebean.default = ["models.*"]
 
 play.evolutions.db.default.autoApply= true
+
+play.modules.enabled += "EagerLoaderModule"
