Set up allowed hosts filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,3 +13,8 @@ ebean.default = ["models.*"]
 play.evolutions.db.default.autoApply= true
 
 play.modules.enabled += "EagerLoaderModule"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["https://warm-everglades-29116.herokuapp.com"]
+}
