--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,5 +16,5 @@ play.modules.enabled += "EagerLoaderModule"
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["https://warm-everglades-29116.herokuapp.com"]
+  allowed = [".herokuapp.com"]
 }
