--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,14 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.filters.cors {
+  allowedOrigins = ["https://ridvansrestaurantclient.herokuapp.com/"]
+  allowedHttpMethods = ["GET", "POST"]
+  preflightMaxAge = 3 days
+}
+
 play.http.secret.key="12345678987654321"
 play.http.secret.key=${?APPLICATION_SECRET}
 
