Cors filter add

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,9 +5,11 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.filters.cors {
-  allowedOrigins = ["https://ridvansrestaurantclient.herokuapp.com/"]
+  allowedOrigins = ["*.herokuapp.com/"]
   allowedHttpMethods = ["GET", "POST"]
+  pathPrefixes = ["/"]
   preflightMaxAge = 3 days
+  allowedHttpHeaders = null
 }
 
 play.http.secret.key="12345678987654321"
