--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,7 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 
-play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.enabled += play.filters.cors.CORSFilter
 
 play.filters.cors {
   allowedOrigins = ["*.herokuapp.com/"]
