Add cors filter class

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,8 +5,8 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.filters.enabled += play.filters.cors.CORSFilter
 
 play.filters.cors {
-  allowedOrigins = ["*.herokuapp.com/"]
-  allowedHttpMethods = ["GET", "POST"]
+  allowedOrigins = ["*.herokuapp.com"]
+  allowedHttpMethods = null
   pathPrefixes = ["/"]
   preflightMaxAge = 3 days
   allowedHttpHeaders = null
