Exposed authoriztion header

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,6 +10,8 @@ play.filters.cors {
   pathPrefixes = ["/"]
   preflightMaxAge = 3 days
   allowedHttpHeaders = null
+  exposedHeaders = ["Authorization"]
+
 }
 
 play.http.secret.key="12345678987654321"
