Server to deployement

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.filters.enabled += play.filters.cors.CORSFilter
 
 play.filters.cors {
-  allowedOrigins = ["https://ridvansrestaurantclient.herokuapp.com", "*"]
+  allowedOrigins = null
   allowedHttpMethods = null
   pathPrefixes = ["/"]
   preflightMaxAge = 3 days
