--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,16 +2,31 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 
+play.filters.enabled += play.filters.cors.CORSFilter
+
+play.filters.cors {
+  allowedOrigins = null
+  allowedHttpMethods = null
+  pathPrefixes = ["/"]
+  preflightMaxAge = 3 days
+  allowedHttpHeaders = null
+  exposedHeaders = ["Authorization"]
+
+}
+
 play.http.secret.key="12345678987654321"
 play.http.secret.key=${?APPLICATION_SECRET}
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/restoran"
-db.default.username = "postgres"
-db.default.password = "abh"
+db.default.url=${DATABASE_URL}
 
 ebean.default = ["models.*"]
 
 play.evolutions.db.default.autoApply= true
 
 play.modules.enabled += "EagerLoaderModule"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = [".herokuapp.com"]
+}
